# segfault-repro

./: Cargo.toml  package.json  pnpm-lock.yaml
src/: lib.rs
