[package]
edition = "2021"
name = "oximigrate"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { package = "sqlx-oldapi", version = "0.6.14", features = [
  "runtime-tokio-rustls",
  "mssql",
  "sqlite",
  "chrono",
  "time",
  "macros",
] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
napi = { version = "2.13.3", features = ["napi4", "napi6", "async"] }
napi-derive = "2.13"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.75"


[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
