[package]
edition = "2021"
name = "some-lib"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { package = "sqlx-oldapi", version = "0.6.14", features = [
  "runtime-tokio-rustls",
  "mssql",
  "sqlite",
  "chrono",
  "time",
  "macros",
] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
napi-derive = "2.13"

[profile.release]
lto = true
